--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-* { font-family: 'Be Vietnam Pro', sans-serif; }
+* { font-family: 'Open Sans', sans-serif; }
 body {
     margin: 100px auto;
     width: 100%;
@@ -18,6 +18,7 @@ body {
     width: 70%; 
     margin-left: 5%; 
     color: white;
+    font-family: 'Lora', serif;
 }
 .message {
     font-style: italic;
