--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * { font-family: 'Open Sans', sans-serif; }
 body {
-    margin: 100px auto;
+    margin: 2em auto;
     width: 100%;
     max-width: 600px;
 }
@@ -9,7 +9,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     background: cornflowerblue;
-    width: 100%;
+    width: calc(100% - 30px);
     padding: 15px;
     border-radius: 5px;
 }
