--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,53 @@
 * { font-family: 'Open Sans', sans-serif; }
 body {
-    margin: 2em auto;
+    margin: 0 auto;
     width: 100%;
     max-width: 600px;
+    background-image: url(../images/pattern_dark.png);
+    background-position: center;
+    background-repeat: repeat;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+h1, h2, h3, h4, h5, h6 { color: #687178; }
+.container{
+    background-color: white;
+    padding: 1.5em;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, .5);
 }
 .myInfo {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background: cornflowerblue;
+    background: #2b5074;
     width: calc(100% - 30px);
     padding: 15px;
     border-radius: 5px;
 }
-.myInfo img { width: 35%; }
+.myInfo img { 
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
 .myInfo h1 { 
-    width: 70%; 
+    width: 100%; 
     margin-left: 5%; 
     color: white;
     font-family: 'Lora', serif;
 }
+.list h2 { text-align: center; }
+.list-lessons {
+    list-style-type: none;
+}
+.list-lessons li {
+    font-weight: bold;
+    font-size: 17px;
+    margin: 10px auto;
+    color: #687178;
+}
+.list-lessons li a { font-weight: normal; }
 .message {
     font-style: italic;
     font-size: 95%;
@@ -27,7 +55,7 @@ body {
     padding-top: 5px;
 }
 .footer {
-    background: cornflowerblue;
+    background: #2b5074;
     padding: 15px;
     text-align: center;
     color: white;
@@ -35,3 +63,21 @@ body {
     width: calc(100% - 30px);
 }
 .footer p small { color: greenyellow; }
+
+@media screen and ( max-width: 480px){
+    .container { 
+        margin: .75em;
+    }
+    .myInfo {
+        flex-direction: column;
+    }
+    .myInfo h1 { 
+        text-align: center; 
+        margin: 0;
+    }
+    .myInfo img {
+        margin: 0 auto 1em;
+        width: 120px;
+        height: 120px;
+    }
+}
