--- a/lesson3/css/style.css
+++ b/lesson3/css/style.css
@@ -2,22 +2,51 @@
 body {
     margin: 2em auto;
     width: 100%;
-    max-width: 600px;
+    max-width: 1200px;
+    background-image: url(../images/pattern_dark.png);
+    background-position: center;
+    background-repeat: repeat;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+p, ul, ol { font-size: 17px; }
+h1, h2, h3, h4, h5, h6 { color: #687178; }
+.container{
+    background-color: white;
+    padding: 1.5em;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, .5);
 }
 main {
     padding-bottom: 50px;
+    text-align: center;
+    width: 80%;
+    margin: 0 auto;
 }
+.mobile-menu { display: none; }
 .myInfo {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background: cornflowerblue;
+    background: #2b5074;
     width: calc(100% - 30px);
     padding: 15px;
     border-radius: 5px;
 }
 .myInfo img { width: 35%; }
-.myInfo > a { text-align: center; }
+.myInfo > a { 
+    text-align: center; 
+    color: white;
+    text-decoration: none;
+    background-color: greenyellow;
+    width: fit-content;
+    margin: 0 auto;
+    color: #2b5074;
+    padding: 15px;
+    border-radius: 5px;
+    font-weight: bold;
+}
 .myInfo h1, .myInfo h2 { 
     margin-left: 5%; 
     color: white;
@@ -37,7 +66,7 @@ main {
     padding-top: 5px;
 }
 .footer {
-    background: cornflowerblue;
+    background: #2b5074;
     padding: 15px;
     text-align: center;
     color: white;
@@ -66,6 +95,7 @@ nav {
     background-color: gainsboro; 
     margin-top: 5px;
     border-radius: 5px;
+    overflow: hidden;
 }
 nav ul {
     list-style: none;
@@ -84,3 +114,60 @@ nav ul li a{
     transition: all 0.3s;
 }
 nav ul li a:hover { font-weight: bold; }
+#sub-nav.show { display: flex!important; }
+.person{
+    margin-bottom: 2em;
+    border-radius: 5px;
+    border: solid 1px gray;
+}
+.person p { font-weight: bold; }
+.person p span { font-weight: normal; }
+.person ul, section ul {
+    list-style-type: none;
+}
+.person ul li::after { content: " - "; }
+.person ul li::before { content: " - "; }
+@media screen and ( max-width: 480px){
+    .container { 
+        margin: .75em;
+    }
+    .myInfo {
+        flex-direction: column;
+    }
+    .myInfo h1 { 
+        text-align: center; 
+        margin: 0;
+    }
+    .myInfo img {
+        margin: 0 auto 1em;
+        width: 120px;
+        height: 120px;
+    }
+    #sub-nav {
+        display: none!important;
+        flex-direction: column;
+        text-align: center;
+        padding: 0;
+        border-radius: 5px;
+        overflow: hidden;
+    }
+    #sub-nav li {
+        width: 100%;
+        height: 30px;
+        line-height: 30px;
+        transition: all 0.3s;
+    }
+    #sub-nav li:hover {
+        background-color: #2b5074;
+        color: white;
+    }
+    .mobile-menu { 
+        display: block;
+        width: calc(100% - 20px);
+        background-color: #2b5074;
+        color: white;
+        text-align: center;
+        padding: 10px;
+        cursor: pointer;
+    }
+}
