--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -3,6 +3,7 @@
         flex-direction: column; 
         text-align: center;
     }
+    .container { margin: 1rem auto; }
     .menu-items { flex-direction: row; }
     /* Grid */
     .grid{
