--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -3,13 +3,20 @@
     .brand img {
         height: 80px;
     }
-    header { flex-direction: row; }
+    header { 
+        display: flex;
+        flex-direction: row; 
+    }
     .container { margin: 1rem auto; }
     .mobile-menu { display: none; }
     .menu-items { 
         display: flex; 
         flex-direction: row;
     }
+    /* .brand {
+        grid-column: 1;
+    } */
+
     /* Grid */
     .grid {
         display: grid;
