--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -3,27 +3,74 @@
     --secondary-color: #ffe230;
     --accent1-color: #ee4237;
     --accent2-color: #3e3e3e; 
+
+    --anton: 'Anton', sans-serif;
+    --lora: 'Lora', sans-serif;
+    --open-sans: 'Open Sans', sans-serif;
 }
 
-* { font-family: 'Open Sans', sans-serif; }
+* { font-family:  var(--open-sans); }
+*:focus-visible {
+    outline-offset: 0!important;
+    outline: none!important;
+}
 p, a, span, div { font-size: 18px; }
+a { color: var(--accent1-color); }
+a:hover { color: var(--secondary-color); }
+h1, h2, h3, h4, h5, h6 { 
+    font-family: var(--anton); 
+    color: var(--accent2-color);
+    text-transform: uppercase;
+    font-weight: 100;
+}
+h1 > small, h2 > small, h3 > small, h4 > small, h5 > small, h6 > small {
+    text-transform: capitalize;
+}
+.m-center {
+    margin: 0 auto;
+}
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.btn {
+    background-color: var(--secondary-color);
+    padding: 10px;
+    border-radius: 3px;
+    text-decoration: none;
+    color: var(--accent2-color);
+    display: block;
+    width: fit-content;
+    font-family: var(--anton);
+    font-weight: 100;
+    transition: all 0.3s;
+}
+.btn:hover {
+    background-color: var(--accent1-color);
+    color: white;
+}
 body {
     background-image: url(../images/bg-cancun.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .container {
-    background-color: rgba(255, 255, 255, 0.95);
-    max-width: 1200px;
+    background-color: rgba(255, 255, 255, 0.75);
+    max-width: 1400px;
     margin: 1rem;
 }
 
 header { 
+    background-color: white;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(1fr, minmax(10px, auto));
+    grid-template-rows: auto auto;
 }
 .brand { 
     grid-column: 1; 
@@ -38,7 +85,17 @@ header {
     flex-direction: row;
     justify-content: end;
 }
-
+.date {
+    grid-column: 1/4;
+    grid-row: 3;
+    background-color: var(--accent2-color);
+    padding: 10px;
+    color: gray;
+    text-align: center;
+    margin-top: 15px;
+    font-family: 'Lora', sans-serif;
+    font-style: italic;
+}
 .brand img {
     height: 80px;
 }
@@ -105,50 +162,102 @@ header {
     grid-gap: 10px;
     margin: 1rem;
 }
-
-.grid * {
-    background-color:#ee4237;
-    width: 100%;
-    min-height: 150px;
+.event, .wheater, .join, .call-to-action, .news, .spot {
+    text-align: center;
+    padding: 10px;
+    background: rgb(255 255 255 / 83%);
+    transition: all 0.3s;
 }
-
+.event:hover, .wheater:hover, .join:hover, .call-to-action:hover, .news:hover, .spot:hover {
+    background-color: var(--primary-color);
+    color: white;
+    transform: scale(1.02);
+}
+.grid > div:hover > h3,
+.grid .spot:hover > h3 {
+    color: var(--secondary-color);
+}
+.call-to-action:hover .layer-dark {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.call-to-action:hover .welcome {
+    color: white;
+}
 .event {
     grid-column: 1;
     grid-row: 2;
-    background-color: rosybrown;
 }
 .wheater {
     grid-column: 1;
     grid-row: 3;
-    background-color: royalblue;
 }
 .join {
+    display: none;
     grid-column: 1;
     grid-row: 4;
-    background-color: seagreen;
 }
 .call-to-action {
     grid-column: 1;
     grid-row: 1;
+    background-image: url(../images/original.png);
+    background-position: center;
+    background-size: cover;    
+    position: relative;
+    min-height: 200px;
+    text-align: left;
+}
+.layer-dark {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: -webkit-fill-available;
+    transition: all 0.3s;
+}
+.call-to-action .welcome {
+    color: white;
+    text-shadow: 0px 0px 3px var(--accent2-color);
+    transition: all 0.3s;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+.call-to-action a.btn {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
 }
 .news {
     grid-column: 1;
     grid-row: 4;
-    background-color:sienna;
 }
 .spotlights {
     grid-column: 1;
     grid-row: 5/7;
-    background-color: slateblue;
     grid-gap: 0;
     display: flex;
     flex-direction: column;
+    border: solid 1px white;
 }
-.spotlights > div {
-    margin: 10px;
-    max-width: calc(100% - 20px);
+.spot { margin: 10px; }
+.spot > h4 { text-transform: capitalize; }
+.spot > .icon {
+    font-size: 60px;
+    color: var(--accent2-color);
 }
-
+.spot > .content .message { font-style: italic; }
+.spot:nth-of-type(3) { display: none; }
+hr {
+    border: none;
+    width: 40%;
+    border-bottom: 1px solid var(--accent2-color);
+}
+.spot .content .link {
+    font-size: 16px;
+    margin-bottom: 5px;
+    display: block;
+}
+.spot:hover .icon { color: white; }
 .brand { margin: 0 auto; }
 .brand img { 
     width: 100%;
@@ -177,8 +286,8 @@ footer .columns {
     flex-direction: column;
 }
 .footer-logo { text-align: center; }
-.footer-logo img { 
-    max-width: 90%;
+.footer-logo img {
+    max-width: 220px;
     width: 300px;
     margin-bottom: 35px;
 }
@@ -191,6 +300,11 @@ footer .columns {
     padding: 1em;
     display: flex;
     flex-direction: column;
+}
+.footer-contact h3 { 
+    color: white;
+    text-align: center; 
+    font-weight: 100;
 }
 .footer-contact a {
     color: var(--accent1-color);
