--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -16,18 +16,27 @@
         flex-direction: row;
         justify-content: end;
     }
-    .container { margin: 1rem auto; }
+    .container { 
+        margin: 1rem!important; 
+        width: calc(100% - 2rem);
+    }
     .menu-items { flex-direction: row; }
     /* Grid */
     .grid{
         grid-template-columns: 2fr 1fr;
     }
     .grid > div { grid-column: 1/4; }
-    .call-to-action { grid-row: 1; }
+    .call-to-action { 
+        grid-row: 1; 
+        min-height: 300px;
+    }
     .news { grid-row: 2; }
     .spotlights { 
         grid-row: 3; 
         flex-direction: row;
+    }
+    .spot {
+        width: 50%;
     }
     .join { grid-row: 4; }
     .event {
@@ -49,6 +58,9 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+    }
+    .footer-logo img {
+        width: 180px;
     }
     .footer-contact a{
         text-align: left;
@@ -83,5 +95,28 @@
         z-index: -1;
         left: calc(50% - 8px);
     }
-    
+    .join { display: block; }
+}
+
+@media screen and (min-width: 481px) and (max-width: 730px ) {
+    footer { padding-top: 30px; }
+    footer .columns {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .footer-logo { grid-column: 1/3; }
+    .footer-logo img { 
+        margin: 0 auto 50px; 
+        max-width: 350px;
+        width: 250px;
+    }
+    .footer-map {
+        grid-column: 1;
+        grid-row: 2;
+    }
+    .footer-contact {
+        grid-column: 2;
+        grid-row: 2;
+    }
+    .footer-contact h3 { text-align: left; }
 }
