--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -209,6 +209,18 @@ header {
     overflow: hidden;
     padding: 0;
 }
+div#top-banner {
+    z-index: 999;
+    position: relative;
+    background: var(--primary-color);
+    padding: 15px 15px;
+    top: 0;
+}
+div#top-banner h2{
+    color: white;
+    text-align: center;
+    font-weight: 100;
+}
 .layer-dark {
     position: absolute;
     left: 0;
