--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -22,7 +22,7 @@
     .grid {
         display: grid;
         grid-template-columns: 1fr 2fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-rows: auto auto auto;
         grid-gap: 10px;
         margin: 1rem;
     }
