--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -85,7 +85,18 @@ header {
     flex-direction: row;
     justify-content: end;
 }
-.date {
+.yellow {
+    background-color: var(--secondary-color);
+    grid-column: 1/3;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 15px;
+}
+.yellow > .date, .yellow > .visits {
+    margin: 0;
+}
+.date, .visits {
     grid-column: 1/4;
     grid-row: 3;
     background-color: var(--secondary-color);
@@ -363,32 +374,34 @@ footer .columns {
     line-height: 18px!important;
     font-weight: 300;
 }
-.disc-grid {
-    padding: 1.5rem;
-    display: grid;
-    grid-template: 1fr/ 1fr;
-    grid-gap: 20px;
-}
-.pic-1 {
-    grid-column: 1;
-    grid-row: 1;
-}
-.text-1 {
-    grid-column: 1;
-    grid-row: 2;
-}
-.pic-2 {
-    grid-column: 1;
-    grid-row: 3;
-}
-.pic-3 {
-
-}
-
-.text-3 {
-
-}
-.disc-grid img {
-    width: auto;
+.gallery {
     max-width: 100%;
+    width: calc(100% - 30px);
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+}
+.gallery p {
+    max-width: 300px;
+    text-align: center;
+    margin: 10px auto 35px;
+}
+.gallery picture {
+    width: auto;
+    max-width: 300px;
+    margin: 0 auto;
+}
+.gallery picture img {
+    width: 100%;
+    transition: all 0.3s;
+}
+.gallery picture img:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 10px var(--accent2-color);
+}
+.gallery picture img[data-src] {
+    filter: blur(2px);
+}
+.gallery picture img {
+    filter: blur(0);
 }
