--- a/lesson8/css/style.css
+++ b/lesson8/css/style.css
@@ -7,16 +7,28 @@ main {
     display: flex;
     justify-content: center;
 }
-table { border-spacing: 0; }
-table * { padding: 15px; }
+table { 
+    border-spacing: 0; 
+    margin: 30px auto;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+}
+table * { 
+    padding: 20px 35px; 
+    text-align: center;
+}
 thead tr, tfoot tr { background-color: rgb(53, 187, 142); }
-thead tr:first-child { background-color: aquamarine; }
+thead tr:first-child { 
+    background-color: #124E78;
+    color: white;
+    font-size: 24px;
+    font-weight: 100!important;
+}
 tbody tr:nth-child(odd) { background-color: gainsboro; }
 tbody tr:nth-child(even) { background-color: rgb(185, 185, 185); }
-table { border: solid 1px black; }
+table { border: solid 1px gray; }
 table th { 
-    border-bottom: solid 1px black; 
-    border-right: 1px solid black;
+    border-bottom: solid 1px gray; 
+    border-right: 1px solid gray;
 }
 table th:last-child {
     border-right: none;
