--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -79,5 +79,18 @@
         box-shadow: 0 0 10px var(--accent2-color);
     }
     .yellow { grid-column: 1/4; }
-    
+    .cards { grid-template: auto / repeat(3, minmax(auto, auto)); }
+    .cards section {
+        margin: 0!important;
+        width: calc(100% - 2rem);
+    }
+    table tr th:nth-of-type(3) { display: block; }
+}
+@media screen and (min-width: 1367px) {
+    .cards { grid-template: auto / repeat(4, minmax(auto, auto)); }
+    .cards section {
+        margin: 0!important;
+        width: calc(100% - 2rem);
+    }
+    table tr th:nth-of-type(3) { display: block; }
 }
