--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -468,7 +468,10 @@ input[type="submit"] {
     text-align: center;
 }
 .cards section img {
-    width: 100%;
+    width: 100%;    
+    height: 200px;
+    object-fit: contain;
+
 }
 table {
     width: 100%;
