--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -510,11 +510,19 @@ table tr th:nth-of-type(3) { display: none; }
     grid-template-columns: 1;
     text-align: center;
     grid-template: auto / auto;
+    position: relative;
 }
 .contact form {
     background: white;
-    padding: 1rem 2rem;
+    padding: calc(300px + 2rem) 2rem 1rem;
     width: calc(100% - 4rem);
     box-shadow: 1px 3px 10px #3e3e3e3d;
     text-align: left;
+}
+.contact iframe {
+    width: 100%;
+    height: 300px;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
