--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -5,7 +5,6 @@
     --accent2-color: #3e3e3e; 
 
     --anton: 'Anton', sans-serif;
-    --lora: 'Lora', sans-serif;
     --open-sans: 'Open Sans', sans-serif;
 }
 
@@ -105,7 +104,7 @@ header {
     color: var(--accent2-color);
     text-align: center;
     margin-top: 15px;
-    font-family: 'Lora', sans-serif;
+    font-family: var(--open-sans);
     font-style: italic;
 }
 .brand img {
@@ -249,6 +248,7 @@ div#top-banner h2{
     height: -webkit-fill-available;
     width: 100%;
     height: auto;
+    object-fit: cover;
 }
 .call-to-action .welcome {
     color: white;
@@ -304,7 +304,7 @@ hr {
 }
 .wheater-image .temp { display: flex; }
 .wheater-image p, .wheater-image span {
-    font-family: var(--lora);
+    font-family: var(--open-sans);
     font-size: 36px;
     font-weight: bold;
     margin: auto 0;
@@ -485,6 +485,11 @@ thead {
     background-color: var(--accent1-color);
     color: white;
     border: solid 1px red;
+    display: none;
+}
+tbody tr {
+    display: flex;
+    flex-direction: column;
 }
 thead tr th {
     word-break: keep-all;
@@ -526,3 +531,22 @@ table tr th:nth-of-type(3) { display: none; }
     left: 0;
     top: 0;
 }
+.input-title {
+    display: flex;
+    justify-content: start;
+    flex-direction: row;
+}
+.input-title input { min-width: 30px; }
+.input-title .type {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    font-weight: 800;
+}
+.input-title .type .cost {
+    font-size: 22px;
+    font-weight: 300;
+    font-family: var(--anton);
+    color: var(--primary-color);
+}
+.none { display: none; }
