--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -237,7 +237,7 @@ div#top-banner h2{
     left: 0;
     top: 0;
     width: 100%;
-    height: -webkit-fill-available;
+    height: 1000px;
     transition: all 0.3s;
 }
 .call-to-action picture {
@@ -245,7 +245,6 @@ div#top-banner h2{
     height: 100%;
 }
 .call-to-action img {
-    height: -webkit-fill-available;
     width: 100%;
     height: auto;
     object-fit: cover;
@@ -512,7 +511,7 @@ table tr th:nth-of-type(3) { display: none; }
 }
 .contact > .content,
 .contact > aside {
-    grid-template-columns: 1;
+    grid-template-columns: 1fr;
     text-align: center;
     grid-template: auto / auto;
     position: relative;
