--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -470,10 +470,11 @@ input[type="submit"] {
     text-align: center;
 }
 .cards section img {
-    width: 100%;    
+    width: 100%;
     height: 200px;
+    max-width: 110px;
     object-fit: contain;
-
+    max-height: 70px;
 }
 table {
     width: 100%;
