--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -86,6 +86,11 @@ header {
     flex-direction: row;
     justify-content: end;
 }
+.social-media img {
+    width: 24px;
+    margin: 0 auto;
+    max-height: 26px;
+}
 .yellow {
     background-color: var(--secondary-color);
     grid-column: 1/3;
@@ -350,10 +355,11 @@ footer .columns {
     display: flex;
     flex-direction: column;
 }
-.footer-logo { text-align: center; }
+.footer-logo { text-align: center; width: 100%;}
 .footer-logo img {
     max-width: 220px;
     width: 300px;
+    margin: 0 auto;
     margin-bottom: 35px;
 }
 .footer-map iframe {
@@ -365,6 +371,7 @@ footer .columns {
     padding: 1em;
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 .footer-contact h3 { 
     color: white;
@@ -452,11 +459,14 @@ input[type="submit"] {
     text-align: center;
 }
 .type-of-list button {
-    font-size: 32px;
+    /* font-size: 32px; */
     padding: 7px;
     background: white;
     color: var(--primary-color);
     border: solid 1px var(--primary-color);
+}
+.type-of-list img {
+    width: 32px;
 }
 .type-of-list button:hover {
     cursor: pointer;
