--- a/temple/css/base.css
+++ b/temple/css/base.css
@@ -318,3 +318,76 @@ footer div:nth-of-type(4) {
 }
 .temple-info * { color: var(--accent2-color); }
 .milestone-list li { font-size: 18px; }
+.padding-top { padding-top: 100px; }
+.form {
+    padding: 1rem;
+}
+form label {
+    width: calc(100% - 24px);
+    float: left;
+    padding: 10px;
+    min-height: 50px;
+    display: inline-grid;
+    font-size: 18px;
+}
+form label input, 
+form label select,
+form label textarea { 
+    min-width: calc(100% - 20px);
+    padding: 10px;
+    margin-top: 7px;
+    border-radius: 3px;
+    border: solid 1px lightgray;
+    font-size: 18px;
+}
+fieldset {
+    padding: 0.35em 0.75em 0.625em;
+    border: solid 1px var(--primary-color);
+    border-radius: 3px;
+    color: var(--accent2-color);
+}
+input[type="submit"] {
+    width: 100%;
+    max-width: 250px;
+    margin: 0 auto;
+    border: none;
+}
+.m-center {
+    margin: 0 auto!important;
+}
+.cards {
+    display: grid;
+    grid-template: auto / repeat(1, minmax(auto, 1fr));
+    grid-gap: 2rem;
+    word-break: break-word;
+    padding: 1rem;
+}
+.cards.list { display: block; }
+.cards section {
+    box-shadow: 1px 1px 5px var(--accent2-color);
+    background-color: rgba(255, 255, 255, 0.712);
+    text-align: center;
+    padding-bottom: 1rem;
+}
+.cards section img {
+    width: 100%;
+    min-width: 100%;
+    height: 200px;
+    max-width: 110px;
+    object-fit: cover;
+    max-height: 200px;
+    padding: 0!important;
+}
+.cards section > p {
+    padding: 0 1rem;
+}
+.cards section ul p {
+    text-align: left;
+    font-weight: bold;
+}
+.cards section li { 
+    font-size: 18px!important; 
+    text-align: left;
+    padding-right: 1rem;
+}
+.none { display: none;}
