--- a/temple/css/medium.css
+++ b/temple/css/medium.css
@@ -94,4 +94,7 @@
     .phrase { padding: 2rem;}
     .cards { grid-template: auto / repeat(2, minmax(auto, 1fr)); }
     .padding-top { padding-top: 0!important;}
+    main.contact {
+        grid-template-columns: 1fr 1fr;
+    }
 }
